content, tags and comments of post-page are copmleted (lost post-comment)

--- a/app/blog.html
+++ b/app/blog.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/slick.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&family=Open+Sans:wght@400;600&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&family=Open+Sans:wght@300;400;600&display=swap"
     rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.min.css">
@@ -72,10 +72,10 @@
 
     <main class="main">
       <section class="blog-page">
-        <div class="gallery-page__breakpoints">
+        <div class="blog-page__breakpoints">
           <div class="container">
             <span class="breakpoints__text">
-              <a href="index.html">Home</a> / <a href="blog.html">Blog</a>
+              <a href="./index.html">Home</a> / <a href="./blog.html">Blog</a>
             </span>
           </div>
         </div>
@@ -87,18 +87,29 @@
                 <div class="blog-page__post-desc">
                   <span class="blog-page__post-category">August 15, 2020 | by Ann Summers | Bedroom
                     Furniture</span>
-                  <h1 class="blog-page__post-title">Red selfies edison bulb four dollar toast humblebrag
-                    for
-                    the furniture</h1>
+                  <h1 class="blog-page__post-title">
+                    <a class="blog-page__post-title--link" href="./post.html">
+                      Red selfies edison bulb four dollar toast humblebrag
+                      for
+                      the furniture</a>
+                  </h1>
                   <p class="blog-page__post-text">
                     Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally
                     williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel
                     pin
                     pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy
-                    pabst enamel pin edison bulb farm-to-table
+                    pabst enamel pin edison bulb farm-to-table.
                   </p>
                 </div>
               </article>
+
+              <div class="blog-page__quote">
+                <div class="blog-page__quote-inner">
+                  <p class="blog-page__quote-text">“Simplicity is not the goal. It is the by-product of a good idea and
+                    modest expectations” </p>
+                  <p class="blog-page__quote-author">Paul Rand</p>
+                </div>
+              </div>
 
               <article class="blog-page__post">
                 <div id="play-video" class="video-wrapper">
@@ -112,8 +123,10 @@
                 </div>
                 <div class="blog-page__post-desc">
                   <span class="blog-page__post-category">August 12, 2020 | by Lux Morningstar | Design</span>
-                  <h1 class="blog-page__post-title">Authentic kogi shabby chic</h1>
 
+                  <h1 class="blog-page__post-title blog-page__post-title-authentic "><a class="blog-page__post-title--link" href="./post.html">
+                    Authentic kogi shabby chic</a>
+                  </h1>
                 </div>
               </article>
 
@@ -126,7 +139,9 @@
                 </div>
                 <div class="blog-page__post-desc">
                   <span class="blog-page__post-category">August 18, 2020 | by Ann Summers | Table Furniture</span>
-                  <h1 class="blog-page__post-title">Semiotics fixie four dollar toast, next level woke</h1>
+                  <h1 class="blog-page__post-title"><a class="blog-page__post-title--link" href="./post.html">
+                      Semiotics fixie four dollar toast, next level woke</a>
+                    </h1>
                   <p class="blog-page__post-text">
                     Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally
                     williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel
