contact-page is fully completed

--- a/app/contact.html
+++ b/app/contact.html
@@ -79,9 +79,169 @@
             </span>
           </div>
         </div>
+        <!-- it's from stackoverflow))), that gup remove this part of link
+          1m2!1s0x48670e84fbdd6bd3%3A0x998692b4f1b691e1!2sUlster+Bank+Chambers%2C+O&#39;Connell+Street+Lower%2C+Dublin+1%2C+Ireland!5e0! 
+        -->
+
+        <!-- I've removed this part ^^^ from link and so window on top left was removed
+            1m2!1s0x38aef4f09a1da771%3A0x96aaebfbf3f655ec!2sBuyuk%20Ipak%20Yo&#39;li!5e0! 
+        -->
+        <div class="contact-page__map">
+          <div class="container-max">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10859.235304959333!2d69.31636243108812!3d41.32396643210585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!3m2!1sen!2s!4v1620017552387!5m2!1sen!2s"
+              width="1910 " height="600" style="border:0;" frameborder="0" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+        </div>
+
         <div class="container">
           <div class="contact-page__inner">
+            <div class="contact-page__desc">
+              <h3 class="contact-page__desc-title">
+                Contact Us
+              </h3>
+              <div class="contact-page__desc-content">
+                <ul class="contact-page__social-list">
+                  <li class="contact-page__item"><a class="contact-page__social-link" href="#">
+                      <img class="contact-page__social-img" src="images/blog/facebook.svg" alt=""></a>
+                  </li>
+                  <li class="contact-page__item"><a class="contact-page__social-link" href="#">
+                      <img class="contact-page__social-img" src="images/blog/instagram.svg" alt=""></a>
+                  </li>
+                  <li class="contact-page__item"><a class="contact-page__social-link" href="#">
+                      <img class="contact-page__social-img" src="images/blog/pinterest.svg" alt=""></a>
+                  </li>
+                  <li class="contact-page__item"><a class="contact-page__social-link" href="#">
+                      <img class="contact-page__social-img" src="images/blog/whatsapp.png" alt=""></a>
+                  </li>
+                  <li class="contact-page__item"><a class="contact-page__social-link" href="#">
+                      <img class="contact-page__social-img" src="images/blog/twitter.svg" alt=""></a>
+                  </li>
+                </ul>
+                <p class="contact-page__desc-text">Vexillologist vape microdosing freegan pork belly deep v direct trade
+                  cray
+                  single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine
+                  copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock
+                </p>
+                <p class="contact-page__address">
+                  (415) 829-7934 <br>
+                  725 Green St<br>
+                  San Francisco, California(CA), 94133<br>
+                </p>
+                <a class="footer__info-email" href="mainto:bkzd18kholdarov@gmail.com"
+                  target="_blank">ouremailaddress@email.com</a>
 
+                <div class="contact-page__form">
+                  <div class="contact-page__input">
+                    <textarea class="contact-page__input-text" type="text" placeholder="Your comment"></textarea>
+                    <div class="contact-page__inputs">
+                      <input class="contact-page__input-name" type="name" placeholder="Your name">
+                      <input class="contact-page__input-email" type="email" placeholder="Your email">
+                    </div>
+                  </div>
+
+                  <button class="contact-page__btn" type="submit">Submit</button>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="contact-page-gallery">
+          <div class="container-max">
+            <div class="contact-page-gallery__inner">
+
+              <div class="contact-page-gallery__slider">
+                <div class="contact-page-gallery__slide">
+                  <img class="contact-page-gallery__image" src="./images/about/about-1.jpg" alt="">
+                  <div class="contact-page-gallery__slide-content">
+                    <p class="contact-page-gallery__slide-content__title">Truffaut literally trust</p>
+
+                  </div>
+                </div>
+                <div class="contact-page-gallery__slide">
+                  <img class="contact-page-gallery__image" src="./images/about/about-3.jpg" alt="">
+                  <div class="contact-page-gallery__slide-content">
+                    <p class="contact-page-gallery__slide-content__title">Truffaut literally trust</p>
+                  </div>
+                </div>
+                <div class="contact-page-gallery__slide">
+                  <img class="contact-page-gallery__image" src="./images/about/about-5.jpg" alt="">
+                  <div class="contact-page-gallery__slide-content">
+                    <p class="contact-page-gallery__slide-content__title">Truffaut literally trust</p>
+
+                  </div>
+                </div>
+
+                <div class="contact-page-gallery__slide">
+                  <img class="contact-page-gallery__image" src="./images/about/about-4.jpg" alt="">
+                  <div class="contact-page-gallery__slide-content">
+                    <p class="contact-page-gallery__slide-content__title">Truffaut literally trust</p>
+
+                  </div>
+                </div>
+
+                <div class="contact-page-gallery__slide">
+                  <img class="contact-page-gallery__image" src="./images/about/about-3.jpg" alt="">
+                  <div class="contact-page-gallery__slide-content">
+                    <p class="contact-page-gallery__slide-content__title">Truffaut literally trust</p>
+
+                  </div>
+                </div>
+                <div class="contact-page-gallery__slide">
+                  <img class="contact-page-gallery__image" src="./images/about/about-5.jpg" alt="">
+                  <div class="contact-page-gallery__slide-content">
+                    <p class="contact-page-gallery__slide-content__title">Truffaut literally trust</p>
+
+                  </div>
+                </div>
+
+                <div class="contact-page-gallery__slide">
+                  <img class="contact-page-gallery__image" src="./images/about/about-2.jpg" alt="">
+                  <div class="contact-page-gallery__slide-content">
+                    <p class="contact-page-gallery__slide-content__title">Truffaut literally trust</p>
+
+                  </div>
+                </div>
+                <div class="contact-page-gallery__slide">
+                  <img class="contact-page-gallery__image" src="./images/about/about-1.jpg" alt="">
+                  <div class="contact-page-gallery__slide-content">
+                    <p class="contact-page-gallery__slide-content__title">Truffaut literally trust</p>
+
+                  </div>
+                </div>
+
+                <div class="contact-page-gallery__slide">
+                  <img class="contact-page-gallery__image" src="./images/about/about-2.jpg" alt="">
+                  <div class="contact-page-gallery__slide-content">
+                    <p class="contact-page-gallery__slide-content__title">Truffaut literally trust</p>
+
+                  </div>
+                </div>
+                <div class="contact-page-gallery__slide">
+                  <img class="contact-page-gallery__image" src="./images/about/about-3.jpg" alt="">
+                  <div class="contact-page-gallery__slide-content">
+                    <p class="contact-page-gallery__slide-content__title">Truffaut literally trust</p>
+
+                  </div>
+                </div>
+                <div class="contact-page-gallery__slide">
+                  <img class="contact-page-gallery__image" src="./images/about/about-5.jpg" alt="">
+                  <div class="contact-page-gallery__slide-content">
+                    <p class="contact-page-gallery__slide-content__title">Truffaut literally trust</p>
+
+                  </div>
+                </div>
+                <div class="contact-page-gallery__slide">
+                  <img class="contact-page-gallery__image" src="./images/about/about-1.jpg" alt="">
+                  <div class="contact-page-gallery__slide-content">
+                    <p class="contact-page-gallery__slide-content__title">Truffaut literally trust</p>
+
+                  </div>
+                </div>
+
+              </div>
+            </div>
           </div>
         </div>
       </section>
