working with header, rightside-menu and bottons

--- a/app/page.html
+++ b/app/page.html
@@ -45,16 +45,21 @@
               </li>
             </ul>
           </nav>
-          <input class="rightside-menu__input-checkbox" id="check" type="checkbox">
-          <label class="header__btn" for="check">
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+
+          <button class="header__btn">
             <img class="header__btn-img" src="images/home/icon_menu.svg" alt="icon menu">
-          </label>
-          <div id="rightside-menu" class="rightside-menu">
-            <!-- <input class="rightside-menu__input-checkbox" id="check" type="checkbox"> -->
-            <label class="rightside-menu__label" for="check">
-              <img class="rightside-menu__btn-close" src="images/home/close.svg" alt="close">
-              <!-- <button class="rightside-menu__btn"></button> -->
-            </label>
+          </button>
+
+          <div id="rightside-menu" class="rightside-menu rightside-menu--close">
+
+            <button class="rightside-menu__btn-close">
+              <img class="rightside-menu__btn-icon" src="images/home/close.svg" alt="close">
+            </button>
             <div class="rightside-menu__content">
               <img class="rightside-menu__content-logo" src="images/home/logo-big.png" alt="">
               <h4 class="rightside-menu__content-title">Furniture for life</h4>
@@ -71,9 +76,20 @@
     </header>
 
     <main class="main">
-      PAGE
-      </section>
-
+      <div class="gallery-page__breakpoints">
+        <div class="container">
+          <span class="breakpoints__text">
+            <a href="index.html">Home</a> / <a href="gallery.html">Gallery</a>
+          </span>
+        </div>
+      </div>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias ex voluptatum doloribus optio non inventore
+      qui magnam fugit deleniti. Laboriosam quisquam repellendus voluptates quibusdam saepe. Distinctio, tempore natus
+      repudiandae nesciunt pariatur in ut esse? Cumque fugit et ea quam laudantium unde deleniti sapiente
+      exercitationem? Officia, temporibus? Doloribus laboriosam, quibusdam a deserunt tempore corporis provident totam
+      repellendus quasi, eum in? Odio deleniti illo vero obcaecati expedita fuga labore aperiam reprehenderit. Iure,
+      facere. Esse ex vitae voluptatum quaerat et maiores possimus! Ea facere, accusantium, odit distinctio rerum, natus
+      quasi repellendus quae totam voluptatem eligendi nam aut maxime excepturi optio pariatur libero quisquam!
 
     </main>
 
