--- a/app/page.html
+++ b/app/page.html
@@ -22,8 +22,8 @@
     <header class="header">
       <div class="container">
         <div class="header__inner">
-          <nav class="menu">
-            <ul class="menu__items">
+          <nav class="menu ">
+            <ul class="menu__items menu__items--1">
               <li class="menu__item-list">
                 <a class="menu__list-link" href="about.html">About</a>
               </li>
@@ -32,10 +32,10 @@
               </li>
             </ul>
           </nav>
-          <a class="logo-link" href="index.html">
+          <a class="logo" href="index.html">
             <img src="images/home/logo.png" alt="logo" class="logo-img">
           </a>
-          <nav class="menu">
+          <nav class="menu ">
             <ul class="menu__items">
               <li class="menu__item-list">
                 <a class="menu__list-link" href="blog.html">Blog</a>
