gulp desire project was completed (maybe some mistakes and errors)

--- a/app/contact.html
+++ b/app/contact.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desire</title>
+  <link rel="icon" type="image/png" href="images/home/desire-icon.ico" />
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="css/slick.css" />
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&family=Open+Sans:wght@400;600&display=swap"
@@ -77,25 +78,20 @@
 
     <main class="main">
       <section class="contact-page">
-        <div class="contact-page__breakpoints">
+        <div class="contact-page__breadcrumbs">
           <div class="container">
-            <span class="breakpoints__text">
+            <span class="breadcrumbs__text">
               <a href="index.html">Home</a> / <a href="contact.html">Contact</a>
             </span>
           </div>
         </div>
-        <!-- it's from stackoverflow))), that gup remove this part of link
-          1m2!1s0x48670e84fbdd6bd3%3A0x998692b4f1b691e1!2sUlster+Bank+Chambers%2C+O&#39;Connell+Street+Lower%2C+Dublin+1%2C+Ireland!5e0! 
-        -->
 
-        <!-- I've removed this part ^^^ from link and so window on top left was removed
-            1m2!1s0x38aef4f09a1da771%3A0x96aaebfbf3f655ec!2sBuyuk%20Ipak%20Yo&#39;li!5e0! 
-        -->
         <div class="contact-page__map">
           <div class="container-max">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10859.235304959333!2d69.31636243108812!3d41.32396643210585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!3m2!1sen!2s!4v1620017552387!5m2!1sen!2s"
-              width="1910 " height="600" style="border:0;" frameborder="0" allowfullscreen="" loading="lazy"></iframe>
+              width="100%" height="600" max-width="1920" style="border:0;" frameborder="0" allowfullscreen=""
+              loading="lazy"></iframe>
           </div>
         </div>
 
@@ -309,8 +305,8 @@
 
 
   <script src="js/main.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="js/slick.min.js"></script>
+
+
 
 </body>
 
